fix: natal -> birth
